--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
+  "proxy":"https://note-back-nine.vercel.app",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
