--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/yahya0morsy/note-front.git",
+  "homepage": "https://github.com/yahya0morsy/notes-app-finally",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
