--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/yahya0morsy/notes-app-finally",
+  "homepage": "https://yahya0morsy.github.io/notes-app-finally/",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
